# parser

./: .dockerignore  .env.dist  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  syncWorker.Dockerfile  worker.Dockerfile
.github/workflows/: deploy.yml
.tasks/20260101-1113/: TASK.md
.tasks/20260101-1340/: TASK.md
.tasks/20260122-1000/: TASK.md
.tasks/20260513-0000/: TASK.md
alembic/: env.py
alembic/versions/: 1a3aacde9207_add_feed_id_to_item_hash.py  2cdd130a0aba_update_item_date_to_include_timezone.py  8c2e93e94ed7_initial_migration.py
app/: main.py  settings.py
app/configs/: __init__.py  db.py  env.py  on_startup.py  selenium.py  workers.py
app/core/: dispatcher.py  middlewares.py  parsers.py  storage.py  supervisor.py  worker.py
app/middlewares/: __init__.py  _base.py  cache.py  debug.py  failed.py  feed_rank.py  hash.py  log.py
app/models/: __init__.py  feed.py  feed_parser.py  item.py  item_hash.py
app/parsers/: __init__.py  _base.py  _exceptions.py  _parser.py  anilibria.py  hltv.py  insolarance.py  instagram.py  kinogo.py  liquidpedia.py  liveball.py  mangalib.py  matreshka.py  onefootball.py  pornhub.py  porno365.py  ranobeme.py  reddit.py  rezka.py  rtl.py  sasflix.py  shiki.py  shiki_ongoing.py  spoti.py  stories.py  tiktok.py  tiktok2.py  twitch.py  vk.py  web.py  x.py  youtube.py  yummyanime.py
app/run/: __init__.py  (+3 more)
docker/: docker-compose.yml
scripts/: docker_cmd.sh  get_redis_host.sh
tests/: .env.test  conftest.py  test_db.py
(+122 files in other folders)
