[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "bs4>=0.0.2",
    "lxml>=5.3.2",
    "pydantic>=2.11.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=5.2.1",
    "requests>=2.32.3",
    "rq>=2.3.1",
    "selenium>=4.31.0",
    "tortoise-orm>=0.20.0",
    "yt-dlp==2025.3.31",
]

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "pytest-tornasync>=0.6.0.post2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
