[project]
name = "parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "asyncpg>=0.30.0",
    "bs4>=0.0.2",
    "lxml>=5.3.2",
    "pydantic>=2.11.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "redis[hiredis]>=5.2.1",
    "requests>=2.32.3",
    "rq>=2.3.1",
    "selenium>=4.31.0",
    "tortoise-orm>=0.20.0",
    "yt-dlp==2025.7.21",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.1.0",
    "types-python-dateutil>=2.9.0.20250516",
    "types-requests>=2.32.4.20250611",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
